--- a/src/index.html
+++ b/src/index.html
@@ -253,6 +253,7 @@
 <h2 id="イベントアンケートよろしくお願いします！">イベントアンケートよろしくお願いします！</h2>
 <p><img src="https://i.gyazo.com/7326b005e68b68481b4dabb007942abc.png" alt="image"></p>
 <p>YouTube で入ってきたときのアンケートは 2 つの項目があって、事後アンケートのほうを、ぜひご回答のほどよろしくお願いします！</p>
+<p><img src="https://i.gyazo.com/70b3650722118b8c539067ccdc409c87.png" alt="image"></p>
 <h2 id="ありがとうございました～！">ありがとうございました～！</h2>
 <p><img src="https://i.gyazo.com/6132b1f8e99f5725151417d7c146c6d2.png" alt="image"></p>
 
